Add prettier configs and dev server run instructions.

--- a/package.json
+++ b/package.json
@@ -62,11 +62,15 @@
     "overrides": [
       {
         "files": "*.html",
-        "options": { "parser": "angular" }
+        "options": {
+          "parser": "angular"
+        }
       },
       {
         "files": "*.scss",
-        "options": { "singleQuote": true }
+        "options": {
+          "singleQuote": true
+        }
       }
     ]
   }
