--- a/.prettierrc
+++ b/.prettierrc
@@ -8,9 +8,5 @@
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf",
-  "plugins": [
-    "prettier-plugin-organize-imports",
-    "prettier-plugin-packagejson"
-  ]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"]
 }
-
