--- a/package.json
+++ b/package.json
@@ -1,18 +1,46 @@
 {
   "name": "cinema-booking-app",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
     "backend": "json-server db.json --port 3000",
+    "build": "ng build",
     "dev": "concurrently \"npm run backend\" \"npm run start\"",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test",
+    "watch": "ng build --watch --configuration development"
   },
-  "private": true,
+  "prettier": {
+    "arrowParens": "always",
+    "endOfLine": "lf",
+    "plugins": [
+      "prettier-plugin-organize-imports",
+      "prettier-plugin-packagejson"
+    ],
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false,
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      },
+      {
+        "files": "*.scss",
+        "options": {
+          "singleQuote": true
+        }
+      }
+    ]
+  },
   "dependencies": {
     "@angular/animations": "^19.1.0",
     "@angular/cdk": "^19.2.19",
@@ -45,33 +73,5 @@
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-packagejson": "^2.5.1",
     "typescript": "~5.7.2"
-  },
-  "prettier": {
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "useTabs": false,
-    "printWidth": 100,
-    "trailingComma": "all",
-    "endOfLine": "lf",
-    "arrowParens": "always",
-    "plugins": [
-      "prettier-plugin-organize-imports",
-      "prettier-plugin-packagejson"
-    ],
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      },
-      {
-        "files": "*.scss",
-        "options": {
-          "singleQuote": true
-        }
-      }
-    ]
   }
 }
